Create markup for one pricing only

--- a/index.html
+++ b/index.html
@@ -10,6 +10,35 @@
 
 <body>
   <div id="pricing-page">
+    <header class="header">
+      <h1 class="header__title">Pricing</h1>
+      <p class="header__instructions">Choose the right pricing for you and get started with your project.</p>
+    </header>
+
+    <main class="container">
+      <div class="card">
+        <div class="card__header">
+          <h2 class="card__ title"></h2>
+          <span class="card__ price">
+            $399/year
+          </span>
+          <p class="card__ summary">
+            For organizing every corner of your work & life.
+          </p>
+        </div>
+        <div class="card__ features-wrapper">
+          <div class="card__ features">
+            <ul>
+              <li class="card__ feature">Collaborative workspace</li>
+              <li class="card__ feature">7 day page history</li>
+            </ul>
+          </div>
+          <div class="card__ button-wrapper">
+            <button class="card__ button">Get started</button>
+          </div>
+        </div>
+      </div>
+    </main>
   </div>
 
   <script type="module" src="/src/global-scripts/main.js"></script>
