Reorganize markup for the pricing card

--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
   <div id="pricing-page">
     <header class="header">
       <h1 class="header__title">Pricing</h1>
-      <p class="header__instructions">Choose the right pricing for you and get started with your project.</p>
+      <p class="header__instructions light-text">Choose the right pricing for you and get started with your project.</p>
     </header>
 
     <main class="container">
       <div class="card">
         <div class="card__header">
-          <h2 class="card__ title"></h2>
-          <span class="card__ price">
-            $399/year
-          </span>
-          <p class="card__ summary">
+          <h2 class="card__ title">
+            Basic
+          </h2>
+          <div class="card__ cost">
+              <span class="card__ currency">$</span>
+              <span class="card__ price">399</span>
+              <span class="card__ period">/year</span>
+          </div>
+          <p class="card__ summary light-text">
             For organizing every corner of your work & life.
           </p>
         </div>
@@ -33,9 +37,9 @@
               <li class="card__ feature">7 day page history</li>
             </ul>
           </div>
-          <div class="card__ button-wrapper">
-            <button class="card__ button">Get started</button>
-          </div>
+        </div>
+        <div class="card__ button-wrapper">
+          <button class="card__ button">Get started</button>
         </div>
       </div>
     </main>
